--- a/movie.css
+++ b/movie.css
@@ -4,7 +4,7 @@
     --secondary-color: #01b4e4;
     --text-light: #ffffff;
     --text-dark: #333333;
-    --background-light: #f5f5f5;
+    --background-light: #090000;
     --card-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     --transition-speed: 0.3s;
     --border-radius: 8px;
